[package]
name = "sleuth-kit"
version = "0.0.1"
edition = "2021"

description = "A flexible OSINT toolkit for blockchain investigations"
license = "AGPL-3.0"
repository = "https://github.com/sleuthfi/sleuth-kit-rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
csv = "1.3"
colored = "2.0"
dialoguer = "0.11.0"

[[bin]]
name = "sleuth"
path = "src/main.rs"
